--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     ],
     "description": "ClearSilver template engine bindings for node.js",
     "homepage": "http://github.com/mah0x211/node-clearsilver",
-    "version" : "0.5.0",
-    "license" : [
+    "version" : "0.5.1",
+    "licenses" : [
         {
-            "type": "BSD" 
+            "type": "MIT" 
         } 
     ],
     "main" : "./lib/ClearSilver",
